[package]
name = "semverbump"
version = "0.1.0"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
documentation = "https://docs.rs/semverbump/latest/semverbump/"
homepage = "https://github.com/nbari/semverbump"
repository = "https://github.com/nbari/semverbump"
readme = "README.md"
keywords = ["semverbump", "semver", "bump", "version"]
categories = ["command-line-utilities", "os"]
license-file = "LICENSE"
edition = "2018"

[badges]
travis-ci = { repository = "nbari/semverbump", branch = "master" }

[dependencies]
clap = "2.33.0"
git2 = "0.10"
regex = "1.3.1"
